# rge256

./: Credits.md  README.md  RGE256.ipynb  pyproject.toml  rge256_ex.py  rge256_safe.py  utils.py
c/: Makefile  rge256_drbg.c  rge256_drbg.h  rge256_drbg_cli.c
c/rge256ctr/: rge256ctr.c  rge256ctr.h
rge256/: RGE256.ipynb  __init__.py  rge256_ctr.py  rge256_ex.py  rge256_lite.py  rge256_safe.py  rge256ctr_wrapper.py  rge512_ex.py
tests/: test_cycle.py  test_imports.py  test_small_stats.py
