[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rge256"
version = "0.1.0"
description = "ARX-based PRNG family with pure Python and optional native counter backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Steven Reid" }]
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["rge256*"]

[tool.setuptools.package-data]
rge256 = ["*.so"]
